Src/Newt/v2/NewtonDynamics/Import/testimport.cs


//    static public class Newton
//    {
//        static public class World
//        {
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreate")]
//            static public extern int Create(int a, int b);
//            [DllImport("Newton.dll", EntryPoint = "NewtonGetGlobalScale")]
//            static public extern float GetGlobalScale(int newtonWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonSetSolverModel")]
//            static public extern void SetSolverModel(int a, int b);
//            [DllImport("Newton.dll", EntryPoint = "NewtonSetFrictionModel")]
//            static public extern void SetFrictionModel(int a, int b);
//            [DllImport("Newton.dll", EntryPoint = "NewtonUpdate")]
//            static public extern void Update(int newtonWorld, float timestep);
//            [DllImport("Newton.dll", EntryPoint = "NewtonWorldCollide")]
//            static public extern void Collide(int newtonWorld, int maxSize, int collisionA, ref Matrix offsetA, int collisionB, ref Matrix offsetB, float[] contacts, float[] normals, float[] penetration);
//            [DllImport("Newton.dll", EntryPoint = "NewtonDestroy")]
//            static public extern void Destroy(int newtonWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonSetMinimumFrameRate")]
//            static public extern void SetMinimumFrameRate(int newtonWorld, float frameRate);
//            [DllImport("Newton.dll", EntryPoint = "NewtonGetTimeStep")]
//            static public extern float GetTimeStep(int newtonWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonDestroyAllBodies")]
//            static public extern void DestroyAllBodies(int newtonWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonSetWorldSize")]
//            static public extern void SetSize(int newtonWorld, ref Vector3 min, ref Vector3 max);
//            [DllImport("Newton.dll", EntryPoint = "NewtonSetBodyLeaveWorldEvent")]
//            static public extern void SetBodyLeaveWorldEvent(int newtonWorld, BodyLeaveWorld cb);
//            [DllImport("Newton.dll", EntryPoint = "NewtonWorldFreezeBody")]
//            static public extern void FreezeBody(int newtonWorld, int body);
//            [DllImport("Newton.dll", EntryPoint = "NewtonWorldUnfreezeBody")]
//            static public extern void UnfreezeBody(int newtonWorld, int body);
//            [DllImport("Newton.dll", EntryPoint = "NewtonWorldForEachBodyDo")]
//            static public extern void ForEachBodyDo(int newtonWorld, BodyIterator cb);
//            [DllImport("Newton.dll", EntryPoint = "NewtonGetVersion")]
//            static public extern int GetVersion(int newtonWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonWorldSetUserData")]
//            static public extern void SetUserData(int bodyPtr, [MarshalAs(UnmanagedType.IUnknown)] object o);
//            [DllImport("Newton.dll", EntryPoint = "NewtonWorldGetUserData")]
//            [return: MarshalAs(UnmanagedType.IUnknown)]
//            static public extern object GetUserData(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonWorldRayCast")]
//            static public extern void RayCast(int newtonWorld, ref Vector3 p0, ref Vector3 p1, WorldRayCastCB cb, [MarshalAs(UnmanagedType.IUnknown)] object userData);
//        }
//        static public class Material
//        {
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetDefaultGroupID")]
//            static public extern int GetDefaultGroupID(int newtonWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialCreateGroupID")]
//            static public extern int CreateGroupID(int newtonWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialDestroyAllGroupID")]
//            static public extern void DestroyAllGroupID(int newtonWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetDefaultSoftness")]
//            static public extern void SetDefaultSoftness(int newtonWorld, int id0, int id1, float softnessCoef);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetDefaultElasticity")]
//            static public extern void SetDefaultElasticity(int newtonWorld, int id0, int id1, float elasticCoef);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetDefaultCollidable")]
//            static public extern void SetDefaultCollidable(int newtonWorld, int id0, int id1, int state);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetDefaultFriction")]
//            static public extern void SetDefaultFriction(int newtonWorld, int id0, int id1, float staticFriction, float kineticFriction);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetCollisionCallback")]
//            static public extern void SetCollisionCallback(int newtonWorld, int id0, int id1, [MarshalAs(UnmanagedType.IUnknown)] object UserData, MaterialSetCollisionBegin cb1, MaterialSetCollisionProcess cb2, MaterialSetCollisionEnd cb3);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetUserData ")]
//            static public extern int GetUserData(int newtonWorld, int id0, int id1);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialDisableContact")]
//            static public extern void DisableContact(int materialHandle);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetMaterialPairUserData")]
//            [return: MarshalAs(UnmanagedType.IUnknown)]
//            static public extern object GetMaterialPairUserData(int materialHandle);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetContactFaceAttribute")]
//            static public extern uint GetContactFaceAttribute(int materialHandle);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetCurrentTimestep")]
//            static public extern float GetCurrentTimestep(int materialHandle);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetContactNormalSpeed")]
//            static public extern float GetContactNormalSpeed(int materialHandle, int contactHandle);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetContactTangentSpeed")]
//            static public extern float GetContactTangentSpeed(int materialHandle, int contactHandle, int index);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetContactPositionAndNormal")]
//            static public extern void GetContactPositionAndNormal(int materialHandle, ref Vector3 position, ref Vector3 normal);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetContactForce")]
//            static public extern void GetContactForce(int materialHandle, ref Vector3 force);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetContactTangentDirections")]
//            static public extern void GetContactTangentDirections(int materialHandle, ref Vector3 dir0, ref Vector3 dir1);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialGetBodyCollisionID")]
//            static public extern uint GetBodyCollisionID(int materialHandle, int body);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetContactSoftness")]
//            static public extern void SetContactSoftness(int materialHandle, float softness);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetContactElasticity")]
//            static public extern void SetContactElasticity(int materialHandle, float restitution);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetContactFrictionState")]
//            static public extern void SetContactFrictionState(int materialHandle, int state, int index);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetContactStaticFrictionCoef")]
//            static public extern void SetContactStaticFrictionCoef(int materialHandle, float coef, int index);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetContactKineticFrictionCoef")]
//            static public extern void SetContactKineticFrictionCoef(int materialHandle, float coef, int index);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialSetContactTangentAcceleration")]
//            static public extern void SetContactTangentAcceleration(int materialHandle, float accel, int index);
//            [DllImport("Newton.dll", EntryPoint = "NewtonMaterialContactRotateTangentDirections")]
//            static public extern void ContactRotateTangentDirections(int materialHandle, ref Vector3 alignVector);
//        }
//        static public class Collision
//        {
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateNull")]
//            static public extern int CreateNull(int newtonWorld, float dx, float dy, float dz, ref Matrix offsetMatrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateBox")]
//            static public extern int CreateBox(int newtonWorld, float dx, float dy, float dz, ref Matrix offsetMatrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateBox")]
//            static public extern int CreateBox(int newtonWorld, float dx, float dy, float dz, float[] matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateSphere")]
//            static public extern int CreateSphere(int newtonWorld, float rx, float ry, float rz, ref Matrix offsetMatrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateSphere")]
//            static public extern int CreateSphere(int newtonWorld, float rx, float ry, float rz, float[] matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateCone")]
//            static public extern int CreateCone(int newtonWorld, float radius, float height, ref Matrix offsetMatrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateCone")]
//            static public extern int CreateCone(int newtonWorld, float radius, float height, float[] matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateCapsule")]
//            static public extern int CreateCapsule(int newtonWorld, float radius, float height, ref Matrix offsetMatrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateCapsule")]
//            static public extern int CreateCapsule(int newtonWorld, float radius, float height, float[] matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateCylinder")]
//            static public extern int CreateCylinder(int newtonWorld, float radius, float height, ref Matrix offsetMatrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateCylinder")]
//            static public extern int CreateCylinder(int newtonWorld, float radius, float height, float[] matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateChamferCylinder")]
//            static public extern int CreateChamferCylinder(int newtonWorld, float radius, float height, ref Matrix offsetMatrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateChamferCylinder")]
//            static public extern int CreateChamferCylinder(int newtonWorld, float radius, float height, float[] matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateConvexHull")]
//            static public extern int CreateConvexHull(int newtonWorld, int count, float[] vertexCloud, int strideInBytes, ref Matrix offsetMatrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateConvexHullModifier")]
//            static public extern int CreateConvexHullModifier(int newtonWorld, int convexHullCollision);
//            [DllImport("Newton.dll", EntryPoint = "NewtonConvexHullModifierGetMatrix ")]
//            static public extern void ConvexHullModifierGetMatrix(int convexHullCollision, ref Matrix matrix);
